[package]
name = "hchk"
version = "0.1.0"
authors = ["mis <mis@pld-linux.org>"]

[dependencies]
simple-error = "0.1"
clap = "2.32.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
chrono = "0.4.5"
chrono-tz = "0.5"
chrono-humanize = "0.0.11"
ureq = { version = "*", features = ["json"] }
colored = "1.0"
isatty = "0.1"
