[package]
name = "hchk"
version = "0.2.0"
authors = ["mis <mis@pld-linux.org>"]
edition = "2024"

[dependencies]
simple-error = "0.1"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.5"
chrono-tz = "0.5"
chrono-humanize = "0.0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = "1.0"

[dev-dependencies]
mockito = "1.2"
